@@ -1,0 +1,7 @@
+<header>Alias name</header>
+
+This field determines the part of the alias email address to the left of the
+@, which is typically something like <i>info</i> or <i>sales</i>. <p>
+
+<footer>
+
