@@ -1992,6 +1992,11 @@ sub can_edit_sharedips
 return &master_admin() || &reseller_admin() || $access{'edit_sharedips'};
 }
 
+sub can_edit_catchall
+{
+return &master_admin() || $access{'edit_catchall'};
+}
+
 sub can_edit_scripts
 {
 return 0 if (!$virtualmin_pro);
